--- a/thingsManage/assets/css/style.css
+++ b/thingsManage/assets/css/style.css
@@ -33,6 +33,10 @@
     border-bottom:1px solid #eeeeee;
     text-transform:uppercase;
 }
+.header-li{
+    font-weight:900;
+
+}
 .pad-botm {
     padding-bottom:15px;
 }
@@ -120,6 +124,7 @@ ul,li{
 
 }
 
+
 .homeIconBackground{
     width: 200px;
     height: 200px;
@@ -167,4 +172,58 @@ ul,li{
 .chooseBtn div p{
     text-align: center;
     margin-top: 10px;
+}
+
+.homeIconBackgroundstyle{
+    width: 300px;
+    height: 190px;
+    background: rgba(255,253,255,0.69);
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-left: 70px;
+    float: left;
+
+}
+/* =============================================================
+serviceGroup
+============================================================ */
+.homeIconstyle{
+
+    color:  #305680;
+    font-size: 30px;
+    margin-top: 0px;
+    margin-left: 6px;
+}
+.style{
+    color:  #305680;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-left:45px;
+}
+.positionTwo{
+    margin-left: 25px;
+}
+.postionOne{
+    margin-left: 180px;
+}
+.mainDiv{
+margin: 100px 210px 75px 350px;
+}
+.positionThree{
+    margin-left: 650px;
+    margin-bottom: 0px;
+}
+.positionFour{
+    margin-left: 430px;
+}
+.positionFive{
+    margin-right: auto;
+}
+.span2{
+    margin-left: 666px;
+    font-weight: initial;
+    font-size: inherit;
+    border-bottom:1px solid #eeeeee;
+
 }
